--- a/app/src/main/res/layout/main_settings.xml
+++ b/app/src/main/res/layout/main_settings.xml
@@ -1,76 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:background="?attr/primaryBlackBackground"
-        android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="?attr/primaryBlackBackground">
 
     <ScrollView
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-                android:orientation="vertical"
-                android:gravity="center_vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
 
             <TextView
-                    android:nextFocusDown="@id/settings_lang"
+                android:id="@+id/settings_player"
 
-                    android:id="@+id/settings_player"
-                    style="@style/SettingsItem"
-                    android:text="@string/category_player" />
-
-            <TextView
-                    android:nextFocusUp="@id/settings_player"
-                    android:nextFocusDown="@id/settings_ui"
-
-                    android:id="@+id/settings_lang"
-                    style="@style/SettingsItem"
-                    android:text="@string/category_preferred_media_and_lang" />
+                style="@style/SettingsItem"
+                android:nextFocusDown="@id/settings_lang"
+                android:text="@string/category_player" />
 
             <TextView
-                    android:nextFocusUp="@id/settings_lang"
-                    android:nextFocusDown="@id/settings_nginx"
+                android:id="@+id/settings_lang"
+                style="@style/SettingsItem"
 
-                    android:id="@+id/settings_ui"
-                    style="@style/SettingsItem"
-                    android:text="@string/category_ui" />
-
-            <TextView
-                    android:nextFocusUp="@id/settings_ui"
-                    android:nextFocusDown="@id/settings_updates"
-
-                    android:id="@+id/settings_nginx"
-                    style="@style/SettingsItem"
-                    android:text="@string/category_nginx" />
+                android:nextFocusUp="@id/settings_player"
+                android:nextFocusDown="@id/settings_ui"
+                android:text="@string/category_preferred_media_and_lang" />
 
             <TextView
-                    android:nextFocusUp="@id/settings_nginx"
-                    android:nextFocusDown="@id/settings_credits"
+                android:id="@+id/settings_ui"
+                style="@style/SettingsItem"
 
-                    android:id="@+id/settings_updates"
-                    style="@style/SettingsItem"
-                    android:text="@string/category_updates" />
-
-            <TextView
-                    android:nextFocusUp="@id/settings_updates"
-
-                    android:id="@+id/settings_credits"
-                    style="@style/SettingsItem"
-                    android:text="@string/category_credits" />
+                android:nextFocusUp="@id/settings_lang"
+                android:nextFocusDown="@id/settings_nginx"
+                android:text="@string/category_ui" />
 
             <TextView
-                    android:padding="10dp"
-                    android:gravity="center"
-                    android:layout_gravity="center"
-                    android:textColor="?attr/textColor"
-                    android:text="@string/app_version"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                android:id="@+id/settings_nginx"
+                style="@style/SettingsItem"
+
+                android:nextFocusUp="@id/settings_ui"
+                android:nextFocusDown="@id/settings_updates"
+                android:text="@string/category_nginx" />
+
+            <TextView
+                android:id="@+id/settings_syncplay"
+                style="@style/SettingsItem"
+                android:nextFocusUp="@id/settings_nginx"
+                android:nextFocusDown="@id/settings_updates"
+                android:text="@string/category_syncplay" />
+
+            <TextView
+                android:id="@+id/settings_updates"
+                style="@style/SettingsItem"
+
+                android:nextFocusUp="@id/settings_syncplay"
+                android:nextFocusDown="@id/settings_credits"
+                android:text="@string/category_updates" />
+
+            <TextView
+                android:id="@+id/settings_credits"
+
+                style="@style/SettingsItem"
+                android:nextFocusUp="@id/settings_updates"
+                android:text="@string/category_credits" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="@string/app_version"
+                android:textColor="?attr/textColor" />
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
