--- a/app/src/main/res/layout/player_custom_layout.xml
+++ b/app/src/main/res/layout/player_custom_layout.xml
@@ -112,6 +112,22 @@
                 android:text="@string/filler"
                 android:id="@+id/player_episode_filler" />
     </FrameLayout>
+    <FrameLayout
+            android:id="@+id/player_syncplay_holder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="20dp">
+
+        <ImageButton
+            android:id="@+id/player_syncplay"
+            style="@style/VideoButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_baseline_family_restroom_24" />
+    </FrameLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/player_video_holder"
