--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -134,6 +134,14 @@
             app:popExitAnim="@anim/exit_anim" />
 
     <fragment
+            android:id="@+id/navigation_settings_syncplay"
+            android:name="com.lagradost.cloudstream3.ui.settings.SettingsSyncplay"
+            app:enterAnim="@anim/enter_anim"
+            app:exitAnim="@anim/exit_anim"
+            app:popEnterAnim="@anim/enter_anim"
+            app:popExitAnim="@anim/exit_anim" />
+
+    <fragment
             android:id="@+id/navigation_settings_updates"
             android:name="com.lagradost.cloudstream3.ui.settings.SettingsUpdates"
             app:enterAnim="@anim/enter_anim"
@@ -265,7 +273,14 @@
                 app:popEnterAnim="@anim/enter_anim"
                 app:popExitAnim="@anim/exit_anim" />
         <action
-                android:id="@+id/action_navigation_settings_to_navigation_settings_ui"
+            android:id="@+id/action_navigation_settings_to_navigation_settings_syncplay"
+            app:destination="@id/navigation_settings_syncplay"
+            app:enterAnim="@anim/enter_anim"
+            app:exitAnim="@anim/exit_anim"
+            app:popEnterAnim="@anim/enter_anim"
+            app:popExitAnim="@anim/exit_anim" />
+        <action
+            android:id="@+id/action_navigation_settings_to_navigation_settings_ui"
                 app:destination="@id/navigation_settings_ui"
                 app:enterAnim="@anim/enter_anim"
                 app:exitAnim="@anim/exit_anim"
